First attempt to fix display overflow

--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ body {
     font-size: 46px;
     font-weight: lighter;
     text-align: right;
-    padding-top: 7%;
+    padding-top: 25px;
     margin-bottom: 1px;
     margin-right: 12px;
     height: 75px;
